syntax = 'proto3';

package gameNotification;

message GameStartNotification {
  string gameId = 1;   // 게임 ID
  int64 timestamp = 2; // 게임 시작 시간 (Unix 타임스탬프)
}

message LocationUpdate {
  repeated UserLocation users = 1; // 사용자 위치 목록

  message UserLocation {
    string id = 1;       // 사용자 ID
    uint32 playerId = 2; // 플레이어 ID
    float x = 3;         // X 좌표
    float y = 4;         // Y 좌표
  }
}

message ExitPayload {
  string userId = 1; // 사용자 ID
}