syntax = "proto3";

package game;

message CreateGameRequest {
  int64 timestamp = 1;
}

message GetGameListRequest {
  int64 timestamp = 1;
}

message JoinGameRequest {
  string gameId = 1;
  int64 timestamp = 2;
}

message LocationUpdatePayload {
  string gameId = 1; // game 세션의 ID
  float x = 2; // X 좌표
  float y = 3; // Y 좌표
}